; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_benchmark-pump.c_gbit.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_benchmark-pump.c_gbit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i64, i64)* @gbit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @gbit(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca double, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %3, align 8
  %7 = sitofp i64 %6 to double
  %8 = fdiv double %7, 0x41D0000000000000
  %9 = fmul double %8, 8.000000e+00
  store double %9, double* %5, align 8
  %10 = load double, double* %5, align 8
  %11 = load i64, i64* %4, align 8
  %12 = sitofp i64 %11 to double
  %13 = fdiv double %12, 1.000000e+03
  %14 = fdiv double %10, %13
  ret double %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
